# advent-of-code-2024

./: Cargo.toml
src/: day1.rs
